<resources>
    <string name="app_name">HWork07_UI_Layouts</string>
    <string name="number_followers">454</string>
    <string name="text_followers">followers</string>
    <string name="nunber_following">543</string>
    <string name="text_following">following</string>
    <string name="number_posts">56</string>
    <string name="text_posts">posts</string>
    <string name="text_user_name">User Name</string>
    <string name="text_stories">Stories</string>
    <string name="text_watch_all">Watch all</string>
    <string name="simple_text">Text Text Text Text Text</string>
    <string name="text_comments">View all 25 comments</string>
    <string name="time_last_comments">20 HOURS AGO</string>
    <string name="text_username1">UserName1</string>
    <string name="text_username2">UserName2</string>
    <string name="text_username3">UserName3</string>
    <string name="text_username4">UserName4</string>
    <string name="text_username5">UserName5</string>
    <string name="text_likes_count">1 234 likes</string>
    <string name="text_button_edit_your_profile">Edit your profile</string>
</resources>
