<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_posts"
            style="@style/Info_page_count"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_posts"
            android:paddingTop="7dp"
            style="@style/Info_page_names"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_followers"
            style="@style/Info_page_count"/>
        <TextView
            android:paddingTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_followers"
            style="@style/Info_page_names"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nunber_following"
            style="@style/Info_page_count"/>
        <TextView
            android:paddingTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_following"
            style="@style/Info_page_names"/>
    </LinearLayout>
</LinearLayout>