<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:orientation="horizontal">


    <android.support.v7.widget.CardView
        android:id="@+id/avatar"
        style="@style/card_view_avatar_style"
        app:cardCornerRadius="40dp">

        <ImageView

            android:id="@+id/image_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/image01">

        </ImageView>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/avatar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_posts"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    style="@style/text_account_text_view"
                    android:text="@string/text_posts"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_followers"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    style="@style/text_account_text_view"
                    android:text="@string/text_followers"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nunber_following"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    style="@style/text_account_text_view"
                    android:text="@string/text_following"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_margin="8dp"
        android:layout_toEndOf="@+id/avatar"
        android:layout_toRightOf="@+id/avatar"
        android:background="@color/colorGray"
        android:gravity="center"
        android:text="@string/text_button_edit_your_profile"
        android:textSize="@dimen/text_size_small"/>

</RelativeLayout>