<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/image02" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/ic_favorite"
            android:layout_width="@dimen/size_small_button"
            android:layout_height="@dimen/size_small_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btn_chat"
            android:src="@drawable/heart_outline" />

        <ImageView
            android:id="@+id/btn_chat"
            android:layout_width="@dimen/size_small_button"
            android:layout_height="@dimen/size_small_button"
            android:layout_margin="4dp"
            android:layout_toEndOf="@+id/ic_favorite"
            android:layout_toRightOf="@+id/ic_favorite"
            android:src="@drawable/message_outline" />

        <ImageView
            android:layout_width="@dimen/size_small_button"
            android:layout_height="@dimen/size_small_button"
            android:layout_toEndOf="@+id/btn_chat"
            android:layout_toRightOf="@+id/btn_chat"
            android:rotation="-40"
            android:src="@drawable/send" />

        <ImageView
            android:layout_width="@dimen/size_small_button"
            android:layout_height="@dimen/size_small_button"
            android:layout_alignParentRight="true"
            android:layout_margin="4dp"
            android:src="@drawable/bookmark_outline" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_likes_count"
            style="@style/text_view_black_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_text"
            style="@style/text_view_black_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_comments"
            style="@style/text_view_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_last_comments"
            style="@style/text_view_style" />

    </LinearLayout>

</LinearLayout>