<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">


        <android.support.v7.widget.CardView
            android:id="@+id/action_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:cardCornerRadius="15dp">

            <ImageView

                android:id="@+id/image_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image03">

            </ImageView>
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/action_image"
            android:layout_toRightOf="@+id/action_image"
            android:text="@string/text_user_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/dots_vertical"/>


    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/image03"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/ic_favorite"
                android:layout_width="@dimen/size_small_button"
                android:layout_height="@dimen/size_small_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/btn_chat"
                android:src="@drawable/heart_outline"/>

            <ImageView
                android:id="@+id/btn_chat"
                android:layout_width="@dimen/size_small_button"
                android:layout_height="@dimen/size_small_button"
                android:layout_margin="4dp"
                android:layout_toEndOf="@+id/ic_favorite"
                android:layout_toRightOf="@+id/ic_favorite"
                android:src="@drawable/message_outline"/>

            <ImageView
                android:layout_width="@dimen/size_small_button"
                android:layout_height="@dimen/size_small_button"
                android:layout_toEndOf="@+id/btn_chat"
                android:layout_toRightOf="@+id/btn_chat"
                android:rotation="-40"
                android:src="@drawable/send"/>

            <ImageView
                android:layout_width="@dimen/size_small_button"
                android:layout_height="@dimen/size_small_button"
                android:layout_alignParentRight="true"
                android:layout_margin="4dp"
                android:src="@drawable/bookmark_outline"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_likes_count"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_comments"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_last_comments"
                android:textSize="@dimen/text_size_small"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>